# hartree-fock

./: .gitignore  README.md  go.mod  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: format.yaml  typecheck.yaml
conf/: he.yaml  heh.yaml  main.yaml
data/he/: ijkl.txt  kinetic.txt  overlap.txt  potential.txt
hartree_fork/: __init__.py  checks.py  hartree_fork.py  inputs.py  io.py  ortho.py  paths.py
molecules/: heh.json
molecules/heh/: kinetic.txt  overlap.txt  potential.txt
